--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,7 +14,7 @@
      <section class="header_section">
       <div class="container">
         <header>
-          <div class="logo_box"><img src="./images/icons/logo white.png" alt="logo" /></div>
+          <div class="logo_box"><img src="./images/icons/logo_white.png" alt="logo" /></div>
           <nav>
             <ul>
               <li><a href="">Главная</a></li>
@@ -24,7 +24,7 @@
             </ul>
           </nav>
           <div class="nav_links">
-            <a class="number_link" href="tel:+7 (921) 888 88 88">+7 (921) 888 88 88</a>
+            <a class="number_link" href="tel:+7(921)8888888">+7 (921) 888 88 88</a>
             <a class="text_link" href="#">Бесплатная консультация</a>
           </div>
         </header>
@@ -58,9 +58,9 @@
       <img class="right_branch" src="./images/background/right.png" alt="right branch" />
       <div class="container">
         <div class="img_block">
-          <img src="./images/background/Rectangle 102.png" alt="garden" />
-          <img src="./images/background/Rectangle 103.png" alt="garden" />
-          <img src="./images/background/Rectangle 104.png" alt="garden" />
+          <img src="./images/background/Rectangle_102.png" alt="garden" />
+          <img src="./images/background/Rectangle_103.png" alt="garden" />
+          <img src="./images/background/Rectangle_104.png" alt="garden" />
         </div>
       </div>
     </section>
@@ -78,8 +78,8 @@
         <div class="wrap">
           <div class="img_content">
             <span>Пример 3D-визуализации</span>
-            <img class="first_img" src="./images/img/image 5.png" alt="3D example" />
-            <img class="second_img" src="./images/img/image 6.png" alt="3D example" />
+            <img class="first_img" src="./images/img/image_5.png" alt="3D example" />
+            <img class="second_img" src="./images/img/image_6.png" alt="3D example" />
           </div>
           <div class="list_content">
             <ul>
@@ -174,7 +174,7 @@
         </h3>
       </div>
       <div class="background_block">
-        <img src="./images/img/журнал 2 1.png" alt="magazine" />
+        <img src="./images/img/журнал21.png" alt="magazine" />
         <div class="form_block">
           <span>Пришлем инструкцию!</span>
           <form name="email" method="post" action="#">
@@ -195,10 +195,10 @@
           <h3>Наши проекты</h3>
         </div>
         <div class="img_block">
-          <img src="./images/img/Rectangle 105.png" alt="garden" />
-          <img src="./images/img/Rectangle 106.png" alt="garden" />
-          <img src="./images/img/Rectangle 107.png" alt="garden" />
-          <img src="./images/img/Rectangle 108.png" alt="garden" />
+          <img src="./images/img/Rectangle_105.png" alt="garden" />
+          <img src="./images/img/Rectangle_106.png" alt="garden" />
+          <img src="./images/img/Rectangle_107.png" alt="garden" />
+          <img src="./images/img/Rectangle_108.png" alt="garden" />
           <div class="fig_a">
             <a href="#">Все проекты</a>
           </div>
@@ -389,7 +389,7 @@
       <div class="how_order_block">
         <h4>Как выбрать растения для сада?</h4>
         <span>Пришлем инструкцию!</span>
-        <img src="./images/img/журнал 2 1.png" alt="magazine">
+        <img src="./images/img/журнал21.png" alt="magazine">
         <div class="form_block">
           <form name="email" method="post" action="#">
             <input id="your_email" type="text" placeholder="Ваш Email" /> <br />
@@ -424,7 +424,7 @@
       <div class="container">
         <div class="wrap">
         <div class="contacts_block">
-          <a class = "tel" href="tel:+7(921) 888 88 88">+7(921) 888 88 88</a>
+          <a class = "tel" href="tel:+7(921)8888888">+7(921) 888 88 88</a>
           <a class = "email" href="mailto:info@vesna.ru">info@vesna.ru</a>
           <span>© 2021 VESNA</span>
         </div>
