stille correcting mistakes with validator

--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@
         <div class="form_block">
           <span>Пришлем инструкцию!</span>
           <form name="email" method="post" action="#">
-            <input id="your_email" type="text" placeholder="Ваш Email" /> <br />
-            <input type="checkbox" id="access" name="access" />
+            <input class="your_email" type="text" placeholder="Ваш Email" /> <br />
+            <input type="checkbox" class="access" name="access" />
             <label for="access">Я даю согласие на обработку своих персональных данных</label> <br />
-            <input id="sub_input" type="submit" value="Хочу инструкцию" />
+            <input class="sub_input" type="submit" value="Хочу инструкцию" />
           </form>
         </div>
       </div>
@@ -360,27 +360,27 @@
           </div>
         <div class="accordion">
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="" id="accordion-1" />
+            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-1" />
             <label class="accordion-item_trigger" for="accordion-1"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="" id="accordion-2" />
+            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-2" />
             <label class="accordion-item_trigger" for="accordion-2"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="" id="accordion-3" />
+            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-3" />
             <label class="accordion-item_trigger" for="accordion-3"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="" id="accordion-4" />
+            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-4" />
             <label class="accordion-item_trigger" for="accordion-4"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="" id="accordion-5" />
+            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-5" />
             <label class="accordion-item_trigger" for="accordion-5"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
@@ -392,10 +392,10 @@
         <img src="./images/img/журнал21.png" alt="magazine">
         <div class="form_block">
           <form name="email" method="post" action="#">
-            <input id="your_email" type="text" placeholder="Ваш Email" /> <br />
-            <input type="checkbox" id="access" name="access" />
+            <input class="your_email" type="text" placeholder="Ваш Email" /> <br />
+            <input type="checkbox" class="access" name="access" />
             <label for="access">Я даю согласие на своих персональных данных</label> <br/>
-            <input id="sub_input" type="submit" value="Хочу инструкцию" />
+            <input class="sub_input" type="submit" value="Хочу инструкцию" />
           </form>
         </div>
 
@@ -439,9 +439,9 @@
       </div>
     </footer>
     <!-- FOOTER -->
-    <script type="text/javascript" src="./script/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="./script/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="./slick/slick.min.js"></script>
-    <script type="text/javascript" src="./script/main.js"></script>
+    <script src="./script/jquery-1.11.0.min.js"></script>
+    <script src="./script/jquery-migrate-1.2.1.min.js"></script>
+    <script src="./slick/slick.min.js"></script>
+    <script src="./script/main.js"></script>
   </body>
 </html>
