--- a/index.html
+++ b/index.html
@@ -360,41 +360,41 @@
           </div>
         <div class="accordion">
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-1" />
+            <input class="accordion-item_input" type="radio" name="accordion-item_input" id="accordion-1" />
             <label class="accordion-item_trigger" for="accordion-1"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-2" />
+            <input class="accordion-item_input" type="radio" name="accordion-item_input" id="accordion-2" />
             <label class="accordion-item_trigger" for="accordion-2"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-3" />
+            <input class="accordion-item_input" type="radio" name="accordion-item_input" id="accordion-3" />
             <label class="accordion-item_trigger" for="accordion-3"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-4" />
+            <input class="accordion-item_input" type="radio" name="accordion-item_input" id="accordion-4" />
             <label class="accordion-item_trigger" for="accordion-4"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
           <div class="accordion_item">
-            <input class="accordion-item_input" type="checkbox" name="accordion-item_input" id="accordion-5" />
+            <input class="accordion-item_input" type="radio" name="accordion-item_input" id="accordion-5" />
             <label class="accordion-item_trigger" for="accordion-5"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
         </div>
       </div>
       <div class="how_order_block">
-        <h4>Как выбрать растения для сада?</h4>
+        <h4>Как выбрать <br> растения для сада?</h4>
         <span>Пришлем инструкцию!</span>
         <img src="./images/img/журнал21.png" alt="magazine">
         <div class="form_block">
           <form name="email" method="post" action="#">
             <input class="your_email" type="text" placeholder="Ваш Email" /> <br />
             <input type="checkbox" id="access" name="access" />
-            <label for="access">Я даю согласие на своих персональных данных</label> <br/>
+            <label class = "access_label" for="access">Я даю согласие на своих персональных данных</label> <br/>
             <input class="sub_input" type="submit" value="Хочу инструкцию" />
           </form>
         </div>
