--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <div class="container">
         <header>
           <div class="logo_box"><img src="./images/icons/logo_white.png" alt="logo" /></div>
+          <div class="header__burger">
+            <span></span>
+          </div>
+          <div class="header__menu">
           <nav>
             <ul>
               <li><a href="">Главная</a></li>
@@ -27,6 +31,7 @@
             <a class="number_link" href="tel:+7(921)8888888">+7 (921) 888 88 88</a>
             <a class="text_link" href="#">Бесплатная консультация</a>
           </div>
+        </div>
         </header>
         <div class="title_part">
           <span>Ландшафтная студия VESNA</span>
@@ -80,7 +85,7 @@
             <span>Пример 3D-визуализации</span>
             <img class="first_img" src="./images/img/image_5.png" alt="3D example" />
             <img class="second_img" src="./images/img/image_6.png" alt="3D example" />
-          </div>
+        </div>
           <div class="list_content">
             <ul>
               <li class="li_f">
@@ -304,7 +309,7 @@
               </p>
             </div>
           </div>
-          <div class="slider_item">
+          <div class="slider_item green_background">
             <img class="garden_img" src="./images/img/feedback.png" alt="garden" />
             <div class="text_content">
               <img src="./images/img/tree.png" alt="tree" />
@@ -332,7 +337,7 @@
               </p>
             </div>
           </div>
-          <div class="slider_item">
+          <div class="slider_item green_background">
             <img class="garden_img" src="./images/img/feedback.png" alt="garden" />
             <div class="text_content">
               <img src="./images/img/tree.png" alt="tree" />
