--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- HEADER SECTION  -->
-     <!-- <section class="header_section">
+     <section class="header_section">
       <div class="container">
         <header>
           <div class="logo_box"><img src="./images/icons/logo_white.png" alt="logo" /></div>
@@ -40,11 +40,11 @@
         </div>
       </div>
       <img class="left_branch" src="./images/background/Layer1002.png" alt="left branch" />
-    </section> -->
+    </section>
     <!-- HEADER SECTION  -->
 
     <!-- PLACE SECTION -->
-    <!-- <section class="place_section">
+     <section class="place_section">
       <div class="container">
         <div class="text_block">
           <h3>Создаем не просто красивый сад с картинки, <span>а место, куда захочется возвращаться</span></h3>
@@ -68,7 +68,7 @@
           <img src="./images/background/Rectangle_104.png" alt="garden" />
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- PLACE SECTION -->
 
     <!-- PROFFESSIONAL SECTION  -->
