--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <li>
             <img src="./images/icons/03.png" alt="3" />
             <p>
-              <span>Дождитесь окончания ландшафтных работ</span> <br />
+              <span>Дождитесь окончания ландшафтных работ</span> <br>
               Вы получите идеальный участок с хорошим дренажом, мощеными дорожками и площадками, высаженными растениями
               — деревьями, кустарниками, цветами и газоном.
             </p>
@@ -366,7 +366,7 @@
         <div class="accordion">
           <div class="accordion_item">
             <input class="accordion-item_input" type="radio" name="accordion-item_input" id="accordion-1" />
-            <label class="accordion-item_trigger" for="accordion-1"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</span></label>
+            <label class="accordion-item_trigger" for="accordion-1"><span>Lorem ipsum dolor sit amet, brconsectetur adipiscing elit?</span></label>
             <div class="accordion-item_content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e</p></div>
           </div>
           <div class="accordion_item">
@@ -434,10 +434,10 @@
           <span>© 2021 VESNA</span>
         </div>
         <div class="logo_block">
-          <img  src="./images/icons/footer_icon.png" alt="logotype">
+        <img  src="./images/icons/footer_icon.png" alt="logotype">
         </div>
         <div class="social_block">
-          <img src="./images/icons/insta.png" alt="instagram logotype">
+          <a href="https://www.instagram.com/"><img src="./images/icons/insta.png" alt="instagram logotype"></a>
           <a href="#">Политика конфиденциальности</a>
         </div>
       </div>
