--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Examination</title>
+    <title>Главная</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/media.css" />
     <link rel="stylesheet" href="./slick/slick.css" />
@@ -21,8 +21,8 @@
           <div class="header__menu">
           <nav>
             <ul>
-              <li><a href="">Главная</a></li>
-              <li><a href="">Портфолио</a></li>
+              <li><a class = "disabled" href="">Главная</a></li>
+              <li><a href="./portfolio.html">Портфолио</a></li>
               <li><a href="">Услуги</a></li>
               <li><a class = "last_child"href="">Контакты</a></li>
             </ul>
