--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
           <ul>
             <li><a  href="./index.html">Главная</a></li>
             <li><a class = "disabled" href="">Портфолио</a></li>
-            <li><a href="">Услуги</a></li>
+            <li><a href="./services.html">Услуги</a></li>
             <li><a class = "last_child"href="">Контакты</a></li>
           </ul>
         </nav>
@@ -138,7 +138,7 @@
     </div>
   </div>
   </section>
-  <!-- <section class="how_order_section">
+  <section class="how_order_section">
     <div class="text_block">
       <h3>
         Как выбрать растения <br />
@@ -157,7 +157,7 @@
         </form>
       </div>
     </div>
-  </section> -->
+  </section>
   <footer>
     <div class="container">
       <div class="wrap">
