--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
               <li><a class = "disabled" href="">Главная</a></li>
               <li><a href="./portfolio.html">Портфолио</a></li>
-              <li><a href="">Услуги</a></li>
+              <li><a href="./services.html">Услуги</a></li>
               <li><a class = "last_child"href="">Контакты</a></li>
             </ul>
           </nav>
