--- a/services.html
+++ b/services.html
@@ -115,7 +115,7 @@
           <label for="access">Я даю согласие на обработку своих персональных данных</label> <br />
         </div>
         <div class="submit_input_block">
-        <input class = "sub_input" type="submit">
+        <input class = "sub_input" type="submit" value="Отправить">
       </div>
       </form>
     </div>
@@ -140,6 +140,7 @@
     </div>
   </footer>
   <script src="./script/main.js"></script>
-  <script src="./script/jquery.mask.js"></script>
+  <script src="./script/jquery-1.11.0.min.js"></script>
+  <script src="./script/jquery-migrate-1.2.1.min.js"></script>
 </body>
 </html>
