--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
         </div>
         <div class="green_btn">
-          <a href="#">Выбрать услугу</a>
+          <a href="./services.html">Выбрать услугу</a>
         </div>
       </div>
     </section>
@@ -205,7 +205,7 @@
           <img src="./images/img/Rectangle_107.png" alt="garden" />
           <img src="./images/img/Rectangle_108.png" alt="garden" />
           <div class="fig_a">
-            <a href="#">Все проекты</a>
+            <a href="./portfolio.html">Все проекты</a>
           </div>
         </div>
       </div>
