added links in other pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             <li><a  href="./index.html">Главная</a></li>
             <li><a class = "disabled" href="">Портфолио</a></li>
             <li><a href="./services.html">Услуги</a></li>
-            <li><a class = "last_child"href="">Контакты</a></li>
+            <li><a class = "last_child"href="./contacts.html">Контакты</a></li>
           </ul>
         </nav>
         <div class="nav_links">
