--- a/contacts.html
+++ b/contacts.html
@@ -19,10 +19,10 @@
         <div class="header__menu">
         <nav>
           <ul>
-            <li><a class = "disabled" href="">Главная</a></li>
+            <li><a  href="./index.html">Главная</a></li>
             <li><a href="./portfolio.html">Портфолио</a></li>
             <li><a href="./services.html">Услуги</a></li>
-            <li><a class = "last_child"href="">Контакты</a></li>
+            <li><a class = "last_child" class = "disabled" href="">Контакты</a></li>
           </ul>
         </nav>
         <div class="nav_links">
