--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <li><a class = "disabled" href="">Главная</a></li>
               <li><a href="./portfolio.html">Портфолио</a></li>
               <li><a href="./services.html">Услуги</a></li>
-              <li><a class = "last_child"href="">Контакты</a></li>
+              <li><a class = "last_child" href="./contacts.html">Контакты</a></li>
             </ul>
           </nav>
           <div class="nav_links">
