--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
             <li><a  href="./index.html">Главная</a></li>
             <li><a href="./portfolio.html">Портфолио</a></li>
             <li><a class = "disabled" href="">Услуги</a></li>
-            <li><a class = "last_child"href="">Контакты</a></li>
+            <li><a class = "last_child"href="./contacts.html">Контакты</a></li>
           </ul>
         </nav>
         <div class="nav_links">
