--- a/contacts.html
+++ b/contacts.html
@@ -86,11 +86,16 @@
       <img  src="./images/icons/footer_icon.png" alt="logotype">
       </div>
       <div class="social_block">
-        <a href="https://www.instagram.com/"><img src="./images/icons/insta.png" alt="instagram logotype"></a>
+        <a href="instagram.com"><img src="./images/icons/insta.png" alt="instagram logotype"></a>
         <a href="#">Политика конфиденциальности</a>
       </div>
     </div>
     </div>
   </footer>
+
+  <script src="./script/jquery-1.11.0.min.js"></script>
+  <script src="./script/jquery-migrate-1.2.1.min.js"></script>
+  <script src="./slick/slick.min.js"></script>
+  <script src="./script/main.js"></script>
 </body>
 </html>
