--- a/services.html
+++ b/services.html
@@ -139,8 +139,9 @@
     </div>
     </div>
   </footer>
-  <script src="./script/main.js"></script>
   <script src="./script/jquery-1.11.0.min.js"></script>
   <script src="./script/jquery-migrate-1.2.1.min.js"></script>
+  <script src="./slick/slick.min.js"></script>
+  <script src="./script/main.js"></script>
 </body>
 </html>
