--- a/services.html
+++ b/services.html
@@ -139,6 +139,7 @@
     </div>
     </div>
   </footer>
+  <a href="#" class = "back-to-top"></a>
   <script src="./script/jquery-1.11.0.min.js"></script>
   <script src="./script/jquery-migrate-1.2.1.min.js"></script>
   <script src="./slick/slick.min.js"></script>
